# Riemann

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: README.md  benchmark_cases.json
conf/: config.yaml
conf/agent/: default.yaml
conf/lean/: http.yaml  local.yaml
conf/llm/: anthropic.yaml  minimax.yaml  openai.yaml
reports/: 20_problem_benchmark_report.md  20_problem_benchmark_template.md  20_problem_fixture_report.md  20_problem_fixture_results.json  20_problem_fixture_results.md  _debug_fixture.json
run/conf/: default.yaml
scripts/: run_benchmark.py  run_fixture_benchmark.py
src/: __init__.py  main.py
src/agent/: __init__.py  mathlib_retriever.py  proof_explainer.py  proof_generator.py  proof_to_lean.py  state.py  verification_loop.py  workbench.py
src/benchmarking/: __init__.py  fixture_runner.py
src/cli/: __init__.py  formatters.py  interface.py
src/lean_api/: __init__.py  client.py  exceptions.py  models.py
src/llm_module/: __init__.py  anthropic_client.py  client.py  openai_client.py  prompt_builder.py
tests/: __init__.py  conftest.py  test_agent_state.py  test_cli_workbench.py  test_fixture_runner.py  test_local_client.py  test_main_parser.py  test_prompt_builder.py  test_smoke.py  test_workbench.py
tests/fixtures/: minimal_benchmark_cases.json
